# comps-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  render.yaml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/agent/: __init__.py  extract.py  orchestrator.py  reason.py
backend/app/core/: __init__.py  data.py  estimate.py  hedonic.py  outliers.py  retrieve.py  score.py
backend/app/eval/: __init__.py  backtest.py
backend/data/: kc_sales.parquet
backend/scripts/: prepare_data.py
backend/tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_backtest.py  test_estimate.py  test_haversine.py  test_leakage.py  test_outliers.py  test_property_type.py  test_score.py
docs/: BUILD_BRIEF.md  KV_Comps_Agent_BUILD_BRIEF.md  eval_report.json  eval_report.md  sample_trace.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Badges.tsx  CompMap.tsx  CompTable.tsx  Header.tsx  InputPanel.tsx  MapPicker.tsx  RationalePanel.tsx  ResultsView.tsx  SampleMenu.tsx  SubjectForm.tsx  WarmingScreen.tsx
frontend/src/components/__tests__/: RationalePanel.test.tsx  ResultsView.test.tsx  SubjectForm.test.tsx
frontend/src/lib/: format.ts
frontend/src/lib/__tests__/: format.test.ts
