[project]
name = "kv-comps-agent-backend"
version = "0.1.0"
description = "Comps valuation agent backend — KV Capital AI Engineer hackathon"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "duckdb",
    "pandas",
    "scikit-learn",
    "google-genai",
    "python-dotenv",
    "python-multipart",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's File()/Form()/Depends()/Query() in argument defaults are idiomatic, not B008 bugs.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
